testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/terminated.expect.out
error: expected identifier, found 'terminated'
  ==> terminated.cj:11:2:
   | 
11 | `
   |  ^ expected identifier
   | 

1 error generated, 1 error printed.
